<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">p2_layouts</string>
    <string name="menu_settings">Settings</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>

</resources>